--- a/about.html
+++ b/about.html
@@ -24,11 +24,14 @@
 
 	<nav>
 		<a href="about.html" target="_self"> About me </a>
-		<a href="work.html" target="_self"> Work </a>
+		<a href="portfolio.html" target="_self"> Portfolio </a>
 		<a href="contact.html" target="_self"> Contacts </a>
 	</nav>
- 
+	
+	<br>
 
+	<h3>About me</h3>
+	<p>I'm André Santos, a <strong>versatile designer</strong> specializing in <u>3D modeling</u>, <u>illustrative art</u> and <u>multimedia.</u></p>
 </body>
 
 </html>
