--- a/contact.html
+++ b/contact.html
@@ -24,11 +24,21 @@
 
 	<nav>
 		<a href="about.html" target="_self"> About me </a>
-		<a href="work.html" target="_self"> Work </a>
+		<a href="portfolio.html" target="_self"> Portfolio </a>
 		<a href="contact.html" target="_self"> Contacts </a>
 	</nav>
  
-
+	<br>
+	<h3>Contacts</h3>
+	
+	<address>
+		<p>Escola Superior de Artes e Design (Caldas da Rainha)</p>
+		<p>Campus 3</p>
+		<p>Rua Isidoro Inácio Alves de Carvalho</p>
+		<p>2500-321, Caldas da Rainha - Portugal</p>
+		<a><strong>Telefone </strong><a href="tel:+351262830900">(+351) 926481939</a></p>
+		<p><strong>E-mail:</strong> <a href="mailto:s4nt0sd3sign@gmail.com">s4nt0sd3sign@gmail.com</a></p>
+	  </address>
 </body>
 
 </html>
