--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<nav>
 		<a href="about.html" target="_self"> About me </a>
-		<a href="work.html" target="_self"> Work </a>
+		<a href="portfolio.html" target="_self"> Portfolio </a>
 		<a href="contact.html" target="_self"> Contacts </a>
 	</nav>
 
