--- a/portfolio.html
+++ b/portfolio.html
@@ -22,11 +22,17 @@
 
 	<nav>
 		<a href="about.html" target="_self"> About me </a>
-		<a href="work.html" target="_self"> Work </a>
+		<a href="portfolio.html" target="_self"> Portfolio </a>
 		<a href="contact.html" target="_self"> Contacts </a>
 	</nav>
- 
-	<br><a href="projects\berlinde.html" target="_self"> Berlinde Project </a>
+
+	<br>
+
+	<h3>Portfolio</h3>
+	<ul>
+		<li><a href="projects\berlinde.html" target="_self"> Berlinde Project </a></li>
+		
+	  </ul>
 
 </body>
 
