--- a/projects/berlinde.html
+++ b/projects/berlinde.html
@@ -21,11 +21,13 @@
 
 	<nav>
 		<a href="../about.html" target="_self"> About me </a>
-		<a href="../work.html" target="_self"> Work </a>
+		<a href="../portfolio.html" target="_self"> Portfolio</a>
 		<a href="../contact.html" target="_self"> Contacts </a>
 	</nav>
 
-	<br><a href="https://s4nt0sd3sign.framer.ai/project_marblesgame" target="_blank"> Portfolio </a>
+	<br>
+	<h3>Berlinde Project</h3>
+	<a href="https://s4nt0sd3sign.framer.ai/project_marblesgame" target="_blank"> Don't click on me </a>
 
 
 
