--- a/projects/berlinde.html
+++ b/projects/berlinde.html
@@ -16,7 +16,7 @@
 <body>
 
 	<header>	
-		<h1>André Santos</h1>
+		<h1><a href="../index.html" target="_self"> André Santos </a></h1>
 	</header>
 
 	<nav>
@@ -26,7 +26,8 @@
 	</nav>
 
 	<br>
-	<h3>Berlinde Project</h3>
+	<img src="https://www.noticiasmagazine.pt/files/2020/10/marbles-3070512-1200x675.jpg" alt="esad"/>
+	<figcaption><h3>Berlinde Project</h3></figcaption>
 	<a href="https://s4nt0sd3sign.framer.ai/project_marblesgame" target="_blank"> Don't click on me </a>
 
 
