--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <body>
 	
 	<header>	
-		<h1>André Santos</h1>
+		<h1><a href="index.html" target="_self"> André Santos </a></h1>
 	</header>
 
 	<nav>
@@ -29,9 +29,13 @@
 	</nav>
 	
 	<br>
-
+<hr>
 	<h3>About me</h3>
 	<p>I'm André Santos, a <strong>versatile designer</strong> specializing in <u>3D modeling</u>, <u>illustrative art</u> and <u>multimedia.</u></p>
+
+	<img src="projects/images/IMG-20220224-WA0011.jpg" alt="me"/>
+
+<hr>
 </body>
 
 </html>
