--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 	<header>	
-		<h1>André Santos</h1>
+		<h1><a href="index.html" target="_self"> André Santos </a></h1>
 	</header>
 
 	<nav>
@@ -26,7 +26,27 @@
 		<a href="contact.html" target="_self"> Contacts </a>
 	</nav>
 
+	<br>
 
+	<main>
+		<hr>
+		<h3>Bem-vindo ao meu mundo criativo</h3>
+		<p>Aqui reside uma coleção cuidadosamente selecionada de meu trabalho, representando minha jornada como Design Grafico e Multimedia. De projetos de design inovadores a peças de escrita perspicazes, cada item neste portfólio é uma expressão autêntica do meu compromisso com a excelência e a paixão pela criação.
+			
+			<br>
+			<br>
+
+			Este portfólio é mais do que uma mera coleção de trabalhos; é um testemunho do meu compromisso com a inovação, a qualidade e a busca contínua pela excelência. Espero que você encontre inspiração e insight ao explorar este espaço, e estou ansioso para compartilhar mais sobre minhas experiências e visões pessoalmente.
+			<br>
+			<span>Obrigado por visitar e por fazer parte desta jornada criativa comigo.</span></p>
+		
+	</main>
+
+	
+	<footer>
+		<p>Para mais informações visite <a href="https://s4nt0sd3sign.framer.ai/" target="_blank">s4nt0sd3sign</a>!</p>
+	</footer>
+	<hr>
 </body>
 
 
