--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 <body>
 	
 	<header>	
-		<h1>André Santos</h1>
+		<h1><a href="index.html" target="_self"> André Santos </a></h1>
 	</header>
 
 	<nav>
@@ -27,12 +27,13 @@
 	</nav>
 
 	<br>
-
+<hr>
 	<h3>Portfolio</h3>
 	<ul>
 		<li><a href="projects\berlinde.html" target="_self"> Berlinde Project </a></li>
 		
-	  </ul>
+	</ul>
+<hr>
 
 </body>
 
