--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
 
 
 <head>
-
     <meta charset="UTF-8">
-
+    <meta name="description" content="Aqui encontras tudo sobre mim">
+    <meta name="keywords" content="about, me, about me">
+    <meta name="author" content="André Santos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Test</title>
-
+    
+    <title>About me</title>
 </head>
 
 
@@ -31,10 +31,19 @@
 	<br>
 <hr>
 	<h3>About me</h3>
-	<p>I'm André Santos, a <strong>versatile designer</strong> specializing in <u>3D modeling</u>, <u>illustrative art</u> and <u>multimedia.</u></p>
 
+	<audio controls>
+		<source src="projects/audio/olasouoandre.mp3" type="audio/mp3"/>
+		<p>Your browser doesn't support this audio. Here is a <a href="music.mp3" target="_blank">link to the audio</a> instead.</p>
+	  </audio>
+
+	  <p>I'm André Santos, a <strong>versatile designer</strong> specializing in <u>3D modeling</u>, <u>illustrative art</u> and <u>multimedia.</u></p>
 	<img src="projects/images/IMG-20220224-WA0011.jpg" alt="me"/>
 
+
+	
+
+	
 <hr>
 </body>
 
