--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 
 
 <head>
-
     <meta charset="UTF-8">
-
+    <meta name="description" content="Home page">
+    <meta name="keywords" content="Inicio">
+    <meta name="author" content="André Santos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>André Santos</title>
-
+    
+    <title>Home page</title>
 </head>
 
 <body>
