--- a/portfolio.html
+++ b/portfolio.html
@@ -4,13 +4,13 @@
 
 
 <head>
-
     <meta charset="UTF-8">
-
+    <meta name="description" content="Aqui estao os melhores trabalhos">
+    <meta name="keywords" content="design, multimedia, portfolio">
+    <meta name="author" content="André Santos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Work</title>
-
+    
+    <title>Portfolio</title>
 </head>
 
 
