--- a/projects/berlinde.html
+++ b/projects/berlinde.html
@@ -4,13 +4,13 @@
 
 
 <head>
-
     <meta charset="UTF-8">
-
+    <meta name="description" content="Aqui fica o meu projeto de berlindes">
+    <meta name="keywords" content="berlinde, design, portfolio">
+    <meta name="author" content="André Santos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Document</title>
-
+    
+    <title>Project Berlindes</title>
 </head>
 
 <body>
@@ -26,11 +26,14 @@
 	</nav>
 
 	<br>
-	<img src="https://www.noticiasmagazine.pt/files/2020/10/marbles-3070512-1200x675.jpg" alt="esad"/>
+	
 	<figcaption><h3>Berlinde Project</h3></figcaption>
-	<a href="https://s4nt0sd3sign.framer.ai/project_marblesgame" target="_blank"> Don't click on me </a>
+	
+	<video controls loop muted poster="image.jpg">
+		<source src="videos/jogoberlinde.mp4"  type="video/mp4"/>
+	  </video>
 
-
+	<img src="https://www.noticiasmagazine.pt/files/2020/10/marbles-3070512-1200x675.jpg" alt="esad"/>
 
 </body>
 
