--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
     <meta name="keywords" content="about, me, about me">
     <meta name="author" content="André Santos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<link href="config.css" type="text/css" rel="stylesheet" />
     
     <title>About me</title>
 </head>
@@ -20,30 +22,26 @@
 	
 	<header>	
 		<h1><a href="index.html" target="_self"> André Santos </a></h1>
+
+		<nav>
+			<a href="about.html" target="_self"> About me </a>
+			<a href="portfolio.html" target="_self"> Portfolio </a>
+			<a href="contact.html" target="_self"> Contacts </a>
+		</nav>
 	</header>
-
-	<nav>
-		<a href="about.html" target="_self"> About me </a>
-		<a href="portfolio.html" target="_self"> Portfolio </a>
-		<a href="contact.html" target="_self"> Contacts </a>
-	</nav>
 	
-	<br>
-<hr>
-	<h3>About me</h3>
 
-	<audio controls>
-		<source src="projects/audio/olasouoandre.mp3" type="audio/mp3"/>
-		<p>Your browser doesn't support this audio. Here is a <a href="music.mp3" target="_blank">link to the audio</a> instead.</p>
-	  </audio>
+<hr>
+	<main><h3>About me</h3>
+
+		<audio controls>
+			<source src="projects/audio/olasouoandre.mp3" type="audio/mp3"/>
+			<p>Your browser doesn't support this audio. Here is a <a href="music.mp3" target="_blank">link to the audio</a> instead.</p>
+	 	 </audio>
 
 	  <p>I'm André Santos, a <strong>versatile designer</strong> specializing in <u>3D modeling</u>, <u>illustrative art</u> and <u>multimedia.</u></p>
 	<img src="projects/images/IMG-20220224-WA0011.jpg" alt="me"/>
-
-
-	
-
-	
+	</main>
 <hr>
 </body>
 
