--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="keywords" content="Inicio">
     <meta name="author" content="André Santos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link href="config.css" type="text/css" rel="stylesheet" />
     
     <title>Home page</title>
 </head>
@@ -18,19 +20,19 @@
 
 	<header>	
 		<h1><a href="index.html" target="_self"> André Santos </a></h1>
+
+		<nav>
+			<a href="about.html" target="_self"> About me </a>
+			<a href="portfolio.html" target="_self"> Portfolio </a>
+			<a href="contact.html" target="_self"> Contacts </a>
+		</nav>
 	</header>
 
-	<nav>
-		<a href="about.html" target="_self"> About me </a>
-		<a href="portfolio.html" target="_self"> Portfolio </a>
-		<a href="contact.html" target="_self"> Contacts </a>
-	</nav>
-
-	<br>
-
+	<hr>
 	<main>
-		<hr>
+		
 		<h3>Bem-vindo ao meu mundo criativo</h3>
+		<br>
 		<p>Aqui reside uma coleção cuidadosamente selecionada de meu trabalho, representando minha jornada como Design Grafico e Multimedia. De projetos de design inovadores a peças de escrita perspicazes, cada item neste portfólio é uma expressão autêntica do meu compromisso com a excelência e a paixão pela criação.
 			
 			<br>
@@ -42,11 +44,13 @@
 		
 	</main>
 
-	
+	<br>
+
 	<footer>
 		<p>Para mais informações visite <a href="https://s4nt0sd3sign.framer.ai/" target="_blank">s4nt0sd3sign</a>!</p>
 	</footer>
 	<hr>
+	
 </body>
 
 
