--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,8 @@
     <meta name="keywords" content="design, multimedia, portfolio">
     <meta name="author" content="André Santos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link href="config.css" type="text/css" rel="stylesheet" />
     
     <title>Portfolio</title>
 </head>
@@ -18,21 +20,23 @@
 	
 	<header>	
 		<h1><a href="index.html" target="_self"> André Santos </a></h1>
+
+		<nav>
+			<a href="about.html" target="_self"> About me </a>
+			<a href="portfolio.html" target="_self"> Portfolio </a>
+			<a href="contact.html" target="_self"> Contacts </a>
+		</nav>
 	</header>
 
-	<nav>
-		<a href="about.html" target="_self"> About me </a>
-		<a href="portfolio.html" target="_self"> Portfolio </a>
-		<a href="contact.html" target="_self"> Contacts </a>
-	</nav>
 
-	<br>
 <hr>
+  <main>
 	<h3>Portfolio</h3>
 	<ul>
 		<li><a href="projects\berlinde.html" target="_self"> Berlinde Project </a></li>
 		
 	</ul>
+  </main>
 <hr>
 
 </body>
