--- a/projects/berlinde.html
+++ b/projects/berlinde.html
@@ -9,6 +9,8 @@
     <meta name="keywords" content="berlinde, design, portfolio">
     <meta name="author" content="André Santos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link href="../config.css" type="text/css" rel="stylesheet" />
     
     <title>Project Berlindes</title>
 </head>
@@ -17,24 +19,28 @@
 
 	<header>	
 		<h1><a href="../index.html" target="_self"> André Santos </a></h1>
+
+		<nav>
+			<a href="../about.html" target="_self"> About me </a>
+			<a href="../portfolio.html" target="_self"> Portfolio </a>
+			<a href="../contact.html" target="_self"> Contacts </a>
+		</nav>
 	</header>
 
-	<nav>
-		<a href="../about.html" target="_self"> About me </a>
-		<a href="../portfolio.html" target="_self"> Portfolio</a>
-		<a href="../contact.html" target="_self"> Contacts </a>
-	</nav>
+	<hr>
 
-	<br>
+	<main>
 	
-	<figcaption><h3>Berlinde Project</h3></figcaption>
+		<figcaption><h3>Berlinde Project</h3></figcaption>
 	
-	<video controls loop muted poster="image.jpg">
-		<source src="videos/jogoberlinde.mp4"  type="video/mp4"/>
-	  </video>
+		<video controls loop muted poster="image.jpg">
+			<source src="videos/jogoberlinde.mp4"  type="video/mp4"/>
+	  	</video>
 
-	<img src="https://www.noticiasmagazine.pt/files/2020/10/marbles-3070512-1200x675.jpg" alt="esad"/>
-
+		<img src="https://www.noticiasmagazine.pt/files/2020/10/marbles-3070512-1200x675.jpg" alt="esad"/>
+	</main>
+	
+	<hr>
 </body>
 
 
