--- a/about.html
+++ b/about.html
@@ -21,26 +21,33 @@
 <body>
 	
 	<header>	
-		<h1><a href="index.html" target="_self"> André Santos </a></h1>
-
+		
 		<nav>
-			<a href="about.html" target="_self"> About me </a>
-			<a href="portfolio.html" target="_self"> Portfolio </a>
-			<a href="contact.html" target="_self"> Contacts </a>
+			<a href="index.html" target="_self">André Santos</a>
+			<a href="about.html" target="_self">About me</a>
+			<a href="portfolio.html" target="_self">Portfolio</a>
+			<a href="contact.html" target="_self">Contacts</a>
 		</nav>
+		
 	</header>
 	
 
 <hr>
-	<main><h3>About me</h3>
+	<main>
 
-		<audio controls>
-			<source src="projects/audio/olasouoandre.mp3" type="audio/mp3"/>
-			<p>Your browser doesn't support this audio. Here is a <a href="music.mp3" target="_blank">link to the audio</a> instead.</p>
-	 	 </audio>
+		<h3>About me</h3>
+			
+		
 
 	  <p>I'm André Santos, a <strong>versatile designer</strong> specializing in <u>3D modeling</u>, <u>illustrative art</u> and <u>multimedia.</u></p>
-	<img src="projects/images/IMG-20220224-WA0011.jpg" alt="me"/>
+	  <br>
+	  <audio controls>
+		<source src="projects/audio/olasouoandre.mp3" type="audio/mp3"/>
+		<p>Your browser doesn't support this audio. Here is a <a href="music.mp3" target="_blank">link to the audio</a> instead.</p>
+	 	</audio> 
+		<bR>
+			
+	  <img src="projects/images/IMG-20220224-WA0011.jpg" alt="me"/>
 	</main>
 <hr>
 </body>
