--- a/projects/berlinde.html
+++ b/projects/berlinde.html
@@ -18,13 +18,14 @@
 <body>
 
 	<header>	
-		<h1><a href="../index.html" target="_self"> André Santos </a></h1>
-
+		
 		<nav>
-			<a href="../about.html" target="_self"> About me </a>
-			<a href="../portfolio.html" target="_self"> Portfolio </a>
-			<a href="../contact.html" target="_self"> Contacts </a>
+			<a href="../index.html" target="_self">André Santos</a>
+			<a href="../about.html" target="_self">About me</a>
+			<a href="../portfolio.html" target="_self">Portfolio</a>
+			<a href="../contact.html" target="_self">Contacts</a>
 		</nav>
+		
 	</header>
 
 	<hr>
@@ -35,6 +36,7 @@
 	
 		<video controls loop muted poster="image.jpg">
 			<source src="videos/jogoberlinde.mp4"  type="video/mp4"/>
+			
 	  	</video>
 
 		<img src="https://www.noticiasmagazine.pt/files/2020/10/marbles-3070512-1200x675.jpg" alt="esad"/>
