--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 <body>
 
 	<header>	
-		<h1><a href="index.html" target="_self"> André Santos </a></h1>
-
+		
 		<nav>
-			<a href="about.html" target="_self"> About me </a>
-			<a href="portfolio.html" target="_self"> Portfolio </a>
-			<a href="contact.html" target="_self"> Contacts </a>
+			<a href="index.html" target="_self">André Santos</a>
+			<a href="about.html" target="_self">About me</a>
+			<a href="portfolio.html" target="_self">Portfolio</a>
+			<a href="contact.html" target="_self">Contacts</a>
 		</nav>
+		
 	</header>
 
 	<hr>
