--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,21 @@
 <body>
 	
 	<header>	
-		<h1><a href="index.html" target="_self"> André Santos </a></h1>
-
+		
 		<nav>
-			<a href="about.html" target="_self"> About me </a>
-			<a href="portfolio.html" target="_self"> Portfolio </a>
-			<a href="contact.html" target="_self"> Contacts </a>
+			<a href="index.html" target="_self">André Santos</a>
+			<a href="about.html" target="_self">About me</a>
+			<a href="portfolio.html" target="_self">Portfolio</a>
+			<a href="contact.html" target="_self">Contacts</a>
 		</nav>
+		
 	</header>
 
 
 <hr>
   <main>
 	<h3>Portfolio</h3>
+	<br>
 	<ul>
 		<li><a href="projects\berlinde.html" target="_self"> Berlinde Project </a></li>
 		
