--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,9 @@
 	<h3>Portfolio</h3>
 	<br>
 	<ul>
-		<li><a href="projects\berlinde.html" target="_self"> Berlinde Project </a></li>
+		<li><a href="projects\berlinde.html" target="_self"> 
+			<img src="https://www.noticiasmagazine.pt/files/2020/10/marbles-3070512-1200x675.jpg" alt="berlindes" />
+			Berlinde Project </a></li>
 		
 	</ul>
   </main>
