--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 	<header>	
 		
 		<nav>
-			<a href="index.html" target="_self">André Santos</a>
-			<a href="about.html" target="_self">About me</a>
-			<a href="portfolio.html" target="_self">Portfolio</a>
-			<a href="contact.html" target="_self">Contacts</a>
+			<ul>
+				<li><a href="index.html" target="_self">André Santos</a></li>
+
+				<li></li><a href="about.html" target="_self">About me</a></li>
+				<li></li><a href="portfolio.html" target="_self">Portfolio</a></li>
+				<li></li><a href="contact.html" target="_self">Contacts</a></li>
+			</ul>
 		</nav>
 		
 	</header>
@@ -32,13 +35,14 @@
 	<hr>
 	<main>
 		
-		<h3>Bem-vindo ao meu mundo criativo</h3>
+		<figcaption><h1>Bem-vindo ao meu mundo criativo</figcaption></h1>
+
 		<br>
+		
 		<p>Aqui reside uma coleção cuidadosamente selecionada de meu trabalho, representando minha jornada como Design Grafico e Multimedia. De projetos de design inovadores a peças de escrita perspicazes, cada item neste portfólio é uma expressão autêntica do meu compromisso com a excelência e a paixão pela criação.
 			
 			<br>
-			<br>
-
+	
 			Este portfólio é mais do que uma mera coleção de trabalhos; é um testemunho do meu compromisso com a inovação, a qualidade e a busca contínua pela excelência. Espero que você encontre inspiração e insight ao explorar este espaço, e estou ansioso para compartilhar mais sobre minhas experiências e visões pessoalmente.
 			<br>
 			<span>Obrigado por visitar e por fazer parte desta jornada criativa comigo.</span></p>
