--- a/projects/berlinde.html
+++ b/projects/berlinde.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Aqui fica o meu projeto de berlindes">
     <meta name="keywords" content="berlinde, design, portfolio">
     <meta name="author" content="André Santos">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href="../config.css" type="text/css" rel="stylesheet" />
     
@@ -20,10 +20,13 @@
 	<header>	
 		
 		<nav>
-			<a href="../index.html" target="_self">André Santos</a>
-			<a href="../about.html" target="_self">About me</a>
-			<a href="../portfolio.html" target="_self">Portfolio</a>
-			<a href="../contact.html" target="_self">Contacts</a>
+			<ul>
+				<li><a href="../index.html" target="_self">André Santos</a></li>
+
+				<li></li><a href="../about.html" target="_self">About me</a></li>
+				<li></li><a href="../portfolio.html" target="_self">Portfolio</a></li>
+				<li></li><a href="../contact.html" target="_self">Contacts</a></li>
+			</ul>
 		</nav>
 		
 	</header>
@@ -32,16 +35,62 @@
 
 	<main>
 	
-		<figcaption><h3>Berlinde Project</h3></figcaption>
-	
+		<figcaption><h1>Berlinde Project</h1></figcaption>
+	<!--
 		<video controls loop muted poster="image.jpg">
 			<source src="videos/jogoberlinde.mp4"  type="video/mp4"/>
 			
 	  	</video>
+	-->
+		<h3>Result</h3>
+		<section>
+			<figure><img src="https://framerusercontent.com/images/euKVHl0b1Xl645en6ypai4aZMYc.png" alt="front"/></figure>
+			<figure><img src="https://framerusercontent.com/images/tjYpCVonTVlFPPcKaZ48mC8I.png" alt="back"/></figure>
+		</section>
+		
+		<br>
 
-		<img src="https://www.noticiasmagazine.pt/files/2020/10/marbles-3070512-1200x675.jpg" alt="esad"/>
+		<h3>Briefing</h3>
+
+		<p>Digital prototyping
+			<br><br>
+
+
+			In this brief we had to create a postcard about a traditional game, and convey this message simply and with a color palette summarized in black and white and one other color of our choice. This is how a poster was created referring to the traditional game “marbles”, with the elements of marbles and the hole where they have to hit them.In terms of color, we selected the color yellow to relate to the environment where it was played, on the sand. In order to create an appealing, informative and nostalgic poster. As this work was carried out to be placed in a school context, the name of the poster was placed in the local language, in this case Portuguese.
+			
+			<br><br>
+			
+			Keyword <br>
+			
+			Floor, Fun, Balls, Collision and Movement
+		</p>
+
+		<br>
+		<h3>Color Palette</h3>
+
+		<section>
+			<figure><img src="https://framerusercontent.com/images/qeeHbPS5LBkSNZSMvYUiTaDqRtI.png" alt="sketch1"/>Black #000000</figure>
+			<figure><img src="https://framerusercontent.com/images/rPKnf2QMOJV4LBiCH6i6soPHs.png" alt="sketch2"/>White #FFFFFF</figure>
+			<figure><img src="https://framerusercontent.com/images/0fd2XYz3pMsoPNNSN7TyDNWlhPE.png" alt="sketch3"/>Yellow #F8B133</figure>
+		</section>
+
+		<br>
+		<h3>Sketchs</h3>
+
+		<section>
+			<figure><img src="https://framerusercontent.com/images/oU9LjezEwq6MfdIXT7zFtbSzdRs.png" alt="sketch1"/></figure>
+			<figure><img src="https://framerusercontent.com/images/JBUUlAruklcOTThPO3VLQFbqEp8.png" alt="sketch2"/></figure>
+			<figure><img src="https://framerusercontent.com/images/wdv7o5o3V643INYxnbdMI2YQHjQ.png" alt="sketch3"/></figure>
+		</section>
+		
 	</main>
 	
+	<hr>
+
+	<footer>
+		<p>The software used to create this briefing: Adobe Illustrator.</p>
+	</footer>
+	  
 	<hr>
 </body>
 
