--- a/about.html
+++ b/about.html
@@ -23,10 +23,13 @@
 	<header>	
 		
 		<nav>
-			<a href="index.html" target="_self">André Santos</a>
-			<a href="about.html" target="_self">About me</a>
-			<a href="portfolio.html" target="_self">Portfolio</a>
-			<a href="contact.html" target="_self">Contacts</a>
+			<ul>
+				<li><a href="index.html" target="_self">André Santos</a></li>
+
+				<li></li><a href="about.html" target="_self">About me</a></li>
+				<li></li><a href="portfolio.html" target="_self">Portfolio</a></li>
+				<li></li><a href="contact.html" target="_self">Contacts</a></li>
+			</ul>
 		</nav>
 		
 	</header>
@@ -35,17 +38,13 @@
 <hr>
 	<main>
 
-		<h3>About me</h3>
+		<figcaption><h1>About me</figcaption></h1>
 			
 		
 
 	  <p>I'm André Santos, a <strong>versatile designer</strong> specializing in <u>3D modeling</u>, <u>illustrative art</u> and <u>multimedia.</u></p>
 	  <br>
-	  <audio controls>
-		<source src="projects/audio/olasouoandre.mp3" type="audio/mp3"/>
-		<p>Your browser doesn't support this audio. Here is a <a href="music.mp3" target="_blank">link to the audio</a> instead.</p>
-	 	</audio> 
-		<bR>
+	  
 			
 	  <img src="projects/images/IMG-20220224-WA0011.jpg" alt="me"/>
 	</main>
