--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,13 @@
 	<header>	
 		
 		<nav>
-			<a href="index.html" target="_self">André Santos</a>
-			<a href="about.html" target="_self">About me</a>
-			<a href="portfolio.html" target="_self">Portfolio</a>
-			<a href="contact.html" target="_self">Contacts</a>
+			<ul>
+				<li><a href="index.html" target="_self">André Santos</a></li>
+
+				<li></li><a href="about.html" target="_self">About me</a></li>
+				<li></li><a href="portfolio.html" target="_self">Portfolio</a></li>
+				<li></li><a href="contact.html" target="_self">Contacts</a></li>
+			</ul>
 		</nav>
 		
 	</header>
@@ -32,15 +35,23 @@
 
 <hr>
   <main>
-	<h3>Portfolio</h3>
-	<br>
-	<ul>
-		<li><a href="projects\berlinde.html" target="_self"> 
-			<img src="https://www.noticiasmagazine.pt/files/2020/10/marbles-3070512-1200x675.jpg" alt="berlindes" />
-			Berlinde Project </a></li>
-		
-	</ul>
+	<figcaption><h1>Portfolio</h1></figcaption>
+
+	<div class="gallery">
+        <a href="projects\berlinde.html" class="gallery-item" target="_self">
+            <img src="https://framerusercontent.com/images/euKVHl0b1Xl645en6ypai4aZMYc.png" alt="Berlindes">
+        </a>
+        <a href="foto2.html" class="gallery-item">
+            <img src="https://brunobernardo.pt/12489-home_default/sapatos-camel-homem.jpg" alt="Sapato">
+        </a>
+        <a href="foto3.html" class="gallery-item">
+            <img src="foto3.jpg" alt="Foto 3">
+        </a>
+    </div>
+
   </main>
+
+
 <hr>
 
 </body>
