--- a/about.html
+++ b/about.html
@@ -25,9 +25,8 @@
 		<nav>
 			<ul>
 				<li><a href="index.html" target="_self">André Santos</a></li>
-
-				<li></li><a href="about.html" target="_self">About me</a></li>
 				<li></li><a href="portfolio.html" target="_self">Portfolio</a></li>
+				<li></li><a href="about.html" target="_self">About_me</a></li>
 				<li></li><a href="contact.html" target="_self">Contacts</a></li>
 			</ul>
 		</nav>
@@ -42,11 +41,9 @@
 			
 		
 
-	  <p>I'm André Santos, a <strong>versatile designer</strong> specializing in <u>3D modeling</u>, <u>illustrative art</u> and <u>multimedia.</u></p>
-	  <br>
-	  
+	  <p>I'm André Santos, a <strong>versatile designer</strong> specializing in <u>3D modeling</u>, <u>illustrative art</u> and <u>multimedia.</u></p>	  
 			
-	  <img src="projects/images/IMG-20220224-WA0011.jpg" alt="me"/>
+	  <section><figureh><img src="projects/images/IMG-20220224-WA0011.jpg" alt="me"/></figureh></section>
 	</main>
 <hr>
 </body>
