--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 		<nav>
 			<ul>
 				<li><a href="index.html" target="_self">André Santos</a></li>
-
-				<li></li><a href="about.html" target="_self">About me</a></li>
 				<li></li><a href="portfolio.html" target="_self">Portfolio</a></li>
+				<li></li><a href="about.html" target="_self">About_me</a></li>
 				<li></li><a href="contact.html" target="_self">Contacts</a></li>
 			</ul>
 		</nav>
@@ -41,16 +40,21 @@
 		
 		<p>Aqui reside uma coleção cuidadosamente selecionada de meu trabalho, representando minha jornada como Design Grafico e Multimedia. De projetos de design inovadores a peças de escrita perspicazes, cada item neste portfólio é uma expressão autêntica do meu compromisso com a excelência e a paixão pela criação.
 			
-			<br>
+			<br><br>
 	
 			Este portfólio é mais do que uma mera coleção de trabalhos; é um testemunho do meu compromisso com a inovação, a qualidade e a busca contínua pela excelência. Espero que você encontre inspiração e insight ao explorar este espaço, e estou ansioso para compartilhar mais sobre minhas experiências e visões pessoalmente.
-			<br>
+			<br><br>
 			<span>Obrigado por visitar e por fazer parte desta jornada criativa comigo.</span></p>
 		
 	</main>
 
-	<br>
+	<section>
+		<figureh><img src="projects/images/capa.jpg" alt="front"/></figureh>
 
+
+	</section>
+
+	<hr>
 	<footer>
 		<p>Para mais informações visite <a href="https://s4nt0sd3sign.framer.ai/" target="_blank">s4nt0sd3sign</a>!</p>
 	</footer>
