--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,8 @@
 		<nav>
 			<ul>
 				<li><a href="index.html" target="_self">André Santos</a></li>
-
-				<li></li><a href="about.html" target="_self">About me</a></li>
 				<li></li><a href="portfolio.html" target="_self">Portfolio</a></li>
+				<li></li><a href="about.html" target="_self">About_me</a></li>
 				<li></li><a href="contact.html" target="_self">Contacts</a></li>
 			</ul>
 		</nav>
@@ -41,12 +40,19 @@
         <a href="projects\berlinde.html" class="gallery-item" target="_self">
             <img src="https://framerusercontent.com/images/euKVHl0b1Xl645en6ypai4aZMYc.png" alt="Berlindes">
         </a>
-        <a href="foto2.html" class="gallery-item">
-            <img src="https://brunobernardo.pt/12489-home_default/sapatos-camel-homem.jpg" alt="Sapato">
+
+        <a href="projects/penafirme.html" class="gallery-item">
+            <img src="https://framerusercontent.com/images/cgRkTS2avtuoz09t5FmBCGYlAPw.jpg" alt="Penafirme">
         </a>
-        <a href="foto3.html" class="gallery-item">
-            <img src="foto3.jpg" alt="Foto 3">
+
+        <a href="projects/manzwine.html" class="gallery-item">
+            <img src="https://framerusercontent.com/images/5WgP2UkTtjjLpSMqZuwez5NVw.jpg" alt="Manzwine">
         </a>
+
+        <a href="projects/canvaclock.html" class="gallery-item">
+            <img src="https://framerusercontent.com/images/o9u4u66qZb3cmOrZ61tQDw3PNos.png" alt="Canvaclock">
+        </a>
+        
     </div>
 
   </main>
