--- a/projects/berlinde.html
+++ b/projects/berlinde.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Aqui fica o meu projeto de berlindes">
-    <meta name="keywords" content="berlinde, design, portfolio">
+    <meta name="keywords" content="Berlinde Project, design, portfolio">
     <meta name="author" content="André Santos">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -36,12 +36,7 @@
 	<main>
 	
 		<figcaption><h1>Berlinde Project</h1></figcaption>
-	<!--
-		<video controls loop muted poster="image.jpg">
-			<source src="videos/jogoberlinde.mp4"  type="video/mp4"/>
-			
-	  	</video>
-	-->
+
 		<h3>Result</h3>
 		<section>
 			<figure><img src="https://framerusercontent.com/images/euKVHl0b1Xl645en6ypai4aZMYc.png" alt="front"/></figure>
@@ -89,6 +84,7 @@
 
 	<footer>
 		<p>The software used to create this briefing: Adobe Illustrator.</p>
+
 	</footer>
 	  
 	<hr>
