--- a/projects/penafirme.html
+++ b/projects/penafirme.html
@@ -1,108 +1,121 @@
-<!DOCTYPE html>
+<!--
 
+
+- André Santos 3210463
+
+Data de avaliação
+- 31/05/2024
+
+Nome do enunciado de avaliação
+- Portfolio
+
+Ano letivo (3º, 2023-2024), 
+Semestre (2º), 
+Unidade Curricular (Laboratório de Projeto II), 
+Curso (DGM), 
+Escola (ESAD.CR), 
+Docente (Marco Heleno).
+
+
+-->
+
+
+<!DOCTYPE html>
 <html lang="en">
 
-
 <head>
+    <!-- Define o conjunto de caracteres usado -->
     <meta charset="UTF-8">
+    <!-- Descrição da página para motores de busca -->
     <meta name="description" content="Aqui fica o meu Magazine of the Year - Externato de Penafirme">
+    <!-- Palavras-chave para motores de busca -->
     <meta name="keywords" content="penafirme, design, portfolio">
+    <!-- Autor da página -->
     <meta name="author" content="André Santos">
+    <!-- Ajusta a página para diferentes tamanhos de tela -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="../config.css" type="text/css" rel="stylesheet" />
+    <!-- Link para o arquivo de folha de estilo CSS -->
+    <link href="../config.css" type="text/css" rel="stylesheet" />
     
+    <!-- Título da página -->
     <title>Project Berlindes</title>
 </head>
 
 <body>
 
-	<header>	
-		
-		<nav>
-			<ul>
-				<li><a href="../index.html" target="_self">André Santos</a></li>
-				<li></li><a href="../about.html" target="_self">About me</a></li>
-				<li></li><a href="../portfolio.html" target="_self">Portfolio</a></li>
-				<li></li><a href="../contact.html" target="_self">Contacts</a></li>
-			</ul>
-		</nav>
-		
-	</header>
+    <header>    
+        <!-- Mapa de navegação fixa -->
+        <nav id="top">
+            <ul>
+                <!-- Links de navegação para outras páginas -->
+                <li><a href="../index.html" target="_self">André Santos</a></li>
+                <li><a href="../portfolio.html" target="_self">Portfolio</a></li>
+                <li><a href="../about.html" target="_self">About_me</a></li>
+                <li><a href="../contact.html" target="_self">Contacts</a></li>
+            </ul>
+        </nav>
+    </header>
 
-	<hr>
+    <hr>
 
-	<main>
-	
-		<figcaption><h1>Magazine of
-			the Year - Externato de Penafirme</h1></figcaption>
+    <main>
+        <!-- Título principal da página com uma legenda -->
+        <a href="../portfolio.html" target="_self"><h1>←</h1></a> <!-- Voltar à página Portfolio-->
+        <figcaption><h1>Magazine of the Year - Externato de Penafirme</h1></figcaption>
 
-		<h3>Result</h3>
+        <!-- Seção de resultado com imagens -->
+        <h3>Result</h3>
+        <section>
+            <!-- Imagem da capa frontal -->
+            <figure><img src="https://framerusercontent.com/images/cgRkTS2avtuoz09t5FmBCGYlAPw.jpg" alt="front"/></figure>
+            <!-- Imagem da capa traseira -->
+            <figure><img src="https://framerusercontent.com/images/QdvFxmJUsi4zUV5l0xBPG36nY.jpg" alt="back"/></figure>
+        </section>
 
-		<section>
-			<figure><img src="https://framerusercontent.com/images/cgRkTS2avtuoz09t5FmBCGYlAPw.jpg" alt="front"/></figure>
-			<figure><img src="https://framerusercontent.com/images/QdvFxmJUsi4zUV5l0xBPG36nY.jpg" alt="back"/></figure>
-		</section>
+        <!-- Vídeo do YouTube embutido -->
+        <iframe width="100%" height="400" src="https://www.youtube.com/embed/FrByG7piKu8" title="Externato de penafirme - Cover for the magazine of the year" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-		<iframe width="100%" height="400" src="https://www.youtube.com/embed/FrByG7piKu8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br>
+        <br>
 
-		
-		<br>
-		<br>
+        <!-- Seção de briefing -->
+        <h3>Briefing</h3>
+        <p>Cover for the Magazine of the Year <br>
+            Externato de Penafirme
+            <br><br>
+            In this briefing, the objective was to create a cover for the magazine of the year at the Externato de Penafirme school. The cover would have to identify the school, the year, the director, the person responsible for general coordination, whoever created the cover and finally the printer that was responsible for printing the magazines. This cover was a schoolwide winner and 550 copies were printed.
+            <br><br>
+            This project was done in the second year of my first Multimedia course.
+        </p>
+        <br>
 
-		<h3>Briefing</h3>
+        <!-- Seção de planejamento -->
+        <h3>Planning</h3>
+        <section>
+            <figureh><img src="https://framerusercontent.com/images/d7gQzUqPVVbtmKPcfERrPEy9Ko.jpg" alt="sketch1"/></figureh>
+        </section>
+        <br>
 
-		<p>Cover for the Magazine of the Year <br>
-
-			Externato de penafirme
-			<br><br>
-
-
-			In this briefing, the objective was to create a cover for the magazine of the year at the Externato de Penafirme school. The cover would have to identify the school, the year, the director, the person responsible for general coordination, whoever created the cover and finally the printer that was responsible for printing the magazines. This cover was a schoolwide winner and 550 copies were printed.
-			
-			<br><br>
-			
-			This project was done in the second year of my first Multimedia course.
-		</p>
-
-		<br>
-
-
-
-		<h3>Planning</h3>
-
-		<section>
-			<figureh><img src="https://framerusercontent.com/images/d7gQzUqPVVbtmKPcfERrPEy9Ko.jpg" alt="sketch1"/></figure>
-		</section>
-
-		<br>
-
-
-
-		<h3>Sketchs</h3>
-
-		<section>
-			<figureh><img src="https://framerusercontent.com/images/079nksFh54nGhh1zbDqC0MSJMQ4.png" alt="sketch1"/></figure>
-			<figureh><img src="https://framerusercontent.com/images/2zRe9cjhu11RLafnG2FpaCeLn5M.png" alt="sketch3"/></figure>
-		</section>
-		
-	</main>
-	
-	<hr>
+        <!-- Seção de esboços -->
+        <h3>Sketches</h3>
+        <section>
+            <figureh><img src="https://framerusercontent.com/images/079nksFh54nGhh1zbDqC0MSJMQ4.png" alt="sketch1"/></figureh>
+            <figureh><img src="https://framerusercontent.com/images/2zRe9cjhu11RLafnG2FpaCeLn5M.png" alt="sketch3"/></figureh>
+        </section>
+    </main>
+    
+    <a href="#top"><p>↑ Back to Top ↑</p></a><!-- Puxa a página para o local onde se encontra o ID "top" -->
 
 
+    <hr><!-- Cria uma linha -->
 
+    <footer>
+        <!-- Informação sobre o software utilizado no rodapé da pagina -->
+        <p>The software used to create this briefing: CorelDraw.</p>
+    </footer>
 
-	<footer>
-		<p>The software used to create this briefing: CorelDraw.</p>
-
-	</footer>
-	  
-
-
-
-	<hr>
+    <hr>
 </body>
-
 
 </html>
