--- a/projects/canvaclock.html
+++ b/projects/canvaclock.html
@@ -67,8 +67,11 @@ Docente (Marco Heleno).
 
         <!-- Seção de resultado com vídeo e imagens -->
         <h3>Result</h3>
-        <!-- Vídeo incorporado do YouTube -->
-		<iframe width="100%" height="400" src="https://www.youtube.com/embed/CGyKKpHI-IA" title="CanvaClock" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <!-- Vídeo diretamente dos arquivos do site -->
+		<section><video controls loop>
+            <source src="videos/canvaclock.mp4"  type="video/mp4"/>
+            <p>Your browser doesn't support this video. Here is a <a href="movie.mp4" target="_blank">link to the video</a> instead.</p>
+          </video></section>
 
 
         <!-- Imagens do projeto -->
